force-app/main/default/objects/QuoteLineItem/fields/Bill_To__c.field-meta.xml
<CustomField>
    <fullName>Bill_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Bill To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quote Line Items (Bill To)</relationshipLabel>
    <relationshipName>Quote_Line_Items1</relationshipName>
    <type>Lookup</type>
</CustomField>