force-app/main/default/objects/QuoteLineItem/fields/Customer_Ex_works_price__c.field-meta.xml
<CustomField>
    <fullName>Customer_Ex_works_price__c</fullName>
    <label>Customer Ex-works price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>