force-app/main/default/objects/QuoteLineItem/fields/Customer_Service_Formula__c.field-meta.xml
<CustomField>
    <fullName>Customer_Service_Formula__c</fullName>
    <formula>IF(Sent_to_customer_service__c,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Service Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>