force-app/main/default/objects/QuoteLineItem/fields/Dispatch_Site__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Site__c</fullName>
    <label>Dispatch Site</label>
    <type>TextArea</type>
</CustomField>