force-app/main/default/objects/QuoteLineItem/fields/End_Date_PM_A__c.field-meta.xml
<CustomField>
    <fullName>End_Date_PM_A__c</fullName>
    <label>End Date (PM A)</label>
    <type>Date</type>
</CustomField>