force-app/main/default/objects/QuoteLineItem/fields/Energy_Surcharge_currency__c.field-meta.xml
<CustomField>
    <fullName>Energy_Surcharge_currency__c</fullName>
    <label>Energy Surcharge currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>