force-app/main/default/objects/QuoteLineItem/fields/Energy_Surcharge_per_uom__c.field-meta.xml
<CustomField>
    <fullName>Energy_Surcharge_per_uom__c</fullName>
    <label>Energy Surcharge (per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>