force-app/main/default/objects/QuoteLineItem/fields/ERP_System__c.field-meta.xml
<CustomField>
    <fullName>ERP_System__c</fullName>
    <label>ERP System</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Invoicing Type</fullName>
            </value>
            <value>
                <fullName>JDE Mode of Transport</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>