force-app/main/default/objects/QuoteLineItem/fields/Export_Container_Surcharge_per_uom__c.field-meta.xml
<CustomField>
    <fullName>Export_Container_Surcharge_per_uom__c</fullName>
    <label>Export Container Surcharge (per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>