force-app/main/default/objects/QuoteLineItem/fields/Freight_Condition_Unit__c.field-meta.xml
<CustomField>
    <fullName>Freight_Condition_Unit__c</fullName>
    <label>Freight Condition Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>lot</fullName>
            </value>
            <value>
                <fullName>Per Container</fullName>
            </value>
            <value>
                <fullName>Per MT</fullName>
            </value>
            <value>
                <fullName>Per T</fullName>
            </value>
            <value>
                <fullName>t</fullName>
            </value>
            <value>
                <fullName>BAG</fullName>
            </value>
            <value>
                <fullName>BB</fullName>
            </value>
            <value>
                <fullName>BCK</fullName>
            </value>
            <value>
                <fullName>DTO</fullName>
            </value>
            <value>
                <fullName>EA</fullName>
            </value>
            <value>
                <fullName>KAN</fullName>
            </value>
            <value>
                <fullName>KAR</fullName>
            </value>
            <value>
                <fullName>TO</fullName>
            </value>
            <value>
                <fullName>No fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>