force-app/main/default/objects/QuoteLineItem/fields/Freight_Surcharge_currency__c.field-meta.xml
<CustomField>
    <fullName>Freight_Surcharge_currency__c</fullName>
    <label>Freight Surcharge currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>