force-app/main/default/objects/QuoteLineItem/fields/Freight_surcharge_per_uom__c.field-meta.xml
<CustomField>
    <fullName>Freight_surcharge_per_uom__c</fullName>
    <label>Freight surcharge (per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>