force-app/main/default/objects/QuoteLineItem/fields/Freight_Surcharge_unit__c.field-meta.xml
<CustomField>
    <fullName>Freight_Surcharge_unit__c</fullName>
    <label>Freight Surcharge unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>