force-app/main/default/objects/QuoteLineItem/fields/Freight_Surcharges__c.field-meta.xml
<CustomField>
    <fullName>Freight_Surcharges__c</fullName>
    <label>Freight Surcharges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>