force-app/main/default/objects/QuoteLineItem/fields/FreightUnitOfMeasure__c.field-meta.xml
<CustomField>
    <fullName>FreightUnitOfMeasure__c</fullName>
    <inlineHelpText>Same as product UoM means if product unit is per ton, freight price is per ton</inlineHelpText>
    <label>Freight Unit Of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Same as product</fullName>
                <label>Same as product unit measure</label>
            </value>
            <value>
                <fullName>In total</fullName>
            </value>
            <value>
                <fullName>Per shipment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>