force-app/main/default/objects/QuoteLineItem/fields/Full_delivered_Price_inc_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Full_delivered_Price_inc_surcharge__c</fullName>
    <label>Full delivered Price - inc surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>