force-app/main/default/objects/QuoteLineItem/fields/ICMS__c.field-meta.xml
<CustomField>
    <fullName>ICMS__c</fullName>
    <label>ICMS</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>