force-app/main/default/objects/QuoteLineItem/fields/ImerysManufacturingPlant__c.field-meta.xml
<CustomField>
    <fullName>ImerysManufacturingPlant__c</fullName>
    <formula>PricebookEntry.Product2.ImerysManufacturingPlant__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Imerys Manufacturing Plant</label>
    <type>Text</type>
</CustomField>