force-app/main/default/objects/QuoteLineItem/fields/Inflation_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Inflation_surcharge__c</fullName>
    <label>Inflation surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>