force-app/main/default/objects/QuoteLineItem/fields/Inflation_surcharge_currency__c.field-meta.xml
<CustomField>
    <fullName>Inflation_surcharge_currency__c</fullName>
    <label>Inflation surcharge currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>