force-app/main/default/objects/QuoteLineItem/fields/Inflation_surcharge_unit__c.field-meta.xml
<CustomField>
    <fullName>Inflation_surcharge_unit__c</fullName>
    <label>Inflation surcharge unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>