force-app/main/default/objects/QuoteLineItem/fields/Invoicing_Type__c.field-meta.xml
<CustomField>
    <fullName>Invoicing_Type__c</fullName>
    <label>Invoicing Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full delivered Price Shown Only</fullName>
            </value>
            <value>
                <fullName>Full delivered Price shown with ESC shown separately</fullName>
            </value>
            <value>
                <fullName>Price components combined into one price excluding ESC which should be shown separately</fullName>
            </value>
            <value>
                <fullName>Prices combined into one price excluding ESC and Transport price, which should each be shown separately</fullName>
            </value>
            <value>
                <fullName>All prices shown separately</fullName>
            </value>
            <value>
                <fullName>Prices combined into one price excluding transport price, which should be shown separately</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>