force-app/main/default/objects/QuoteLineItem/fields/JDE_Mode_of_Transport__c.field-meta.xml
<CustomField>
    <fullName>JDE_Mode_of_Transport__c</fullName>
    <label>JDE Mode of Transport</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIRFREIGHT</fullName>
            </value>
            <value>
                <fullName>CUSTOMER AIR FREIGHT</fullName>
            </value>
            <value>
                <fullName>FCL 20&apos;</fullName>
            </value>
            <value>
                <fullName>FCL 40&apos;</fullName>
            </value>
            <value>
                <fullName>Sea Bulk Vessel</fullName>
            </value>
            <value>
                <fullName>CUSTOMER FCL 20&apos; CONTAINER</fullName>
            </value>
            <value>
                <fullName>CUSTOMER FCL 40&apos; CONTAINER</fullName>
            </value>
            <value>
                <fullName>FCL 45&apos;</fullName>
            </value>
            <value>
                <fullName>FCL 40&apos; HIGH CUBE</fullName>
            </value>
            <value>
                <fullName>Customer FCL 40&apos; Pallet Wide</fullName>
            </value>
            <value>
                <fullName>LCL PARTIAL SEA CONTAINER</fullName>
            </value>
            <value>
                <fullName>CUSTOMER LCL CONTAINER</fullName>
            </value>
            <value>
                <fullName>CUSTOMER FCL 40&apos; HIGH CUBE CO</fullName>
            </value>
            <value>
                <fullName>SILO CONTAINER INTERMODAL</fullName>
            </value>
            <value>
                <fullName>FOB COSTS</fullName>
            </value>
            <value>
                <fullName>TRANSPORT FOR EXPRESS SAMPLES</fullName>
            </value>
            <value>
                <fullName>Transport for Samples</fullName>
            </value>
            <value>
                <fullName>TRANSPORT FOR SAMPLES EXW</fullName>
            </value>
            <value>
                <fullName>Rail Wagon Crude</fullName>
            </value>
            <value>
                <fullName>CUSTOMER RAIL WAGON PACKED</fullName>
            </value>
            <value>
                <fullName>SEA CONSOLIDATION</fullName>
            </value>
            <value>
                <fullName>CUSTOMER BULK VESSEL</fullName>
            </value>
            <value>
                <fullName>GENERAL CARGO FTL</fullName>
            </value>
            <value>
                <fullName>CUSTOMER GENERAL CARGO FTL</fullName>
            </value>
            <value>
                <fullName>PARTIAL LOADED TRUCK LTL</fullName>
            </value>
            <value>
                <fullName>Silo truck for slurry</fullName>
            </value>
            <value>
                <fullName>SILO TRUCK</fullName>
            </value>
            <value>
                <fullName>CUSTOMER SILO TRUCK</fullName>
            </value>
            <value>
                <fullName>Tipper Truck</fullName>
            </value>
            <value>
                <fullName>Customer Tipper Truck</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>