force-app/main/default/objects/QuoteLineItem/fields/Logistic_Condition_Line_Item_Descriptio__c.field-meta.xml
<CustomField>
    <fullName>Logistic_Condition_Line_Item_Descriptio__c</fullName>
    <label>Logistic Condition- Line Item Descriptio</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>