force-app/main/default/objects/QuoteLineItem/fields/New_Product_Unit_price__c.field-meta.xml
<CustomField>
    <fullName>New_Product_Unit_price__c</fullName>
    <label>New Product Unit price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>