force-app/main/default/objects/QuoteLineItem/fields/Other1__c.field-meta.xml
<CustomField>
    <fullName>Other1__c</fullName>
    <label>Other1 Surcharge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>