force-app/main/default/objects/QuoteLineItem/fields/Other2__c.field-meta.xml
<CustomField>
    <fullName>Other2__c</fullName>
    <label>Other2 Surcharge</label>
    <length>255</length>
    <type>Text</type>
</CustomField>