force-app/main/default/objects/QuoteLineItem/fields/Other2_Currency__c.field-meta.xml
<CustomField>
    <fullName>Other2_Currency__c</fullName>
    <label>Other2 Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>