force-app/main/default/objects/QuoteLineItem/fields/Other2_Unit__c.field-meta.xml
<CustomField>
    <fullName>Other2_Unit__c</fullName>
    <label>Other2 Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unit</valueSetName>
    </valueSet>
</CustomField>