force-app/main/default/objects/QuoteLineItem/fields/Other_charges_USA_only_per_uom__c.field-meta.xml
<CustomField>
    <fullName>Other_charges_USA_only_per_uom__c</fullName>
    <label>Other charges (USA only-per uom)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>