force-app/main/default/objects/QuoteLineItem/fields/Packaging_Price__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Price__c</fullName>
    <label>Packaging Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>