force-app/main/default/objects/QuoteLineItem/fields/Packaging_Price_PM_A__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Price_PM_A__c</fullName>
    <label>Packaging Price (PM A)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>