force-app/main/default/objects/QuoteLineItem/fields/Product_Lead_Time_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Lead_Time_Unit__c</fullName>
    <label>Product Lead Time Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Day(s)</fullName>
            </value>
            <value>
                <fullName>Week(s)</fullName>
            </value>
            <value>
                <fullName>Month(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>