force-app/main/default/objects/QuoteLineItem/fields/Product_Price_Per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Product_Price_Per_Unit__c</fullName>
    <label>Product Price Per Unit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>