force-app/main/default/objects/QuoteLineItem/fields/Product_Unit_Price_PDF__c.field-meta.xml
<CustomField>
    <fullName>Product_Unit_Price_PDF__c</fullName>
    <formula>&apos;EUR&apos;+&quot;/&quot;+TEXT(Unit__c)+&quot; &quot;+TEXT(ProductUnitPrice__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Unit Price</label>
    <type>Text</type>
</CustomField>