force-app/main/default/objects/QuoteLineItem/fields/Production_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Production_Lead_Time__c</fullName>
    <label>Production Lead Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Delivery_lead_time</valueSetName>
    </valueSet>
</CustomField>