force-app/main/default/objects/QuoteLineItem/fields/Rebate__c.field-meta.xml
<CustomField>
    <fullName>Rebate__c</fullName>
    <label>Rebate</label>
    <type>TextArea</type>
</CustomField>