force-app/main/default/objects/QuoteLineItem/fields/Sent_to_customer_service__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_customer_service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to customer service</label>
    <type>Checkbox</type>
</CustomField>