force-app/main/default/objects/QuoteLineItem/fields/Show_Product_on_Offer__c.field-meta.xml
<CustomField>
    <fullName>Show_Product_on_Offer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show Product on Offer</label>
    <type>Checkbox</type>
</CustomField>