force-app/main/default/objects/QuoteLineItem/fields/Start_Date_PM_A__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_PM_A__c</fullName>
    <label>Start Date (PM A)</label>
    <type>Date</type>
</CustomField>