force-app/main/default/objects/QuoteLineItem/fields/Surcharges1__c.field-meta.xml
<CustomField>
    <fullName>Surcharges1__c</fullName>
    <formula>Energy_Surcharge_per_uom__c +  Freight_surcharge_per_uom__c +  Export_Container_Surcharge_per_uom__c +  Inflation_Surcharge_per_uom__c +  Drayage_Surcharge_per_uom__c +  Fuel_Surcharge_per_uom__c +  Steric_Acid_Surcharge_per_uom__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Surcharges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>