force-app/main/default/objects/QuoteLineItem/fields/Surcharges_PM_A__c.field-meta.xml
<CustomField>
    <fullName>Surcharges_PM_A__c</fullName>
    <label>Surcharges (PM A)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>