force-app/main/default/objects/QuoteLineItem/fields/Total_Price_exc_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_exc_surcharge__c</fullName>
    <label>Total Price - exc surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>