force-app/main/default/objects/QuoteLineItem/fields/Total_Price_exc_surcharge_PM_A__c.field-meta.xml
<CustomField>
    <fullName>Total_Price_exc_surcharge_PM_A__c</fullName>
    <label>Total Price - exc surcharge (PM A)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>