force-app/main/default/objects/QuoteLineItem/fields/Total_price_inc_surcharge__c.field-meta.xml
<CustomField>
    <fullName>Total_price_inc_surcharge__c</fullName>
    <label>Total price - inc surcharge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>