force-app/main/default/objects/QuoteLineItem/fields/Transport_price_per_container__c.field-meta.xml
<CustomField>
    <fullName>Transport_price_per_container__c</fullName>
    <label>Transport price per container</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>