force-app/main/default/objects/QuoteLineItem/fields/Transport_Price_per_unit__c.field-meta.xml
<CustomField>
    <fullName>Transport_Price_per_unit__c</fullName>
    <label>Transport Price (per unit)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>