force-app/main/default/objects/QuoteLineItem/fields/Transport_price_per_unit_PM_A__c.field-meta.xml
<CustomField>
    <fullName>Transport_price_per_unit_PM_A__c</fullName>
    <label>Transport price (per unit, PM A)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>