force-app/main/default/objects/QuoteLineItem/fields/Transport_price_unit_base__c.field-meta.xml
<CustomField>
    <fullName>Transport_price_unit_base__c</fullName>
    <label>Transport price unit base</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>