force-app/main/default/objects/QuoteLineItem/fields/Transportpricelumpsum__c.field-meta.xml
<CustomField>
    <fullName>Transportpricelumpsum__c</fullName>
    <label>Total transport price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>