force-app/main/default/objects/QuoteLineItem/fields/Unit_Price1__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price1__c</fullName>
    <formula>&apos;EUR&apos;+&quot; &quot;+TEXT(Unit_Price__c)+&quot;/&quot;+TEXT(Unit__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price</label>
    <type>Text</type>
</CustomField>