force-app/main/default/objects/QuoteLineItem/fields/Unit_Price__c.field-meta.xml
<CustomField>
    <fullName>Unit_Price__c</fullName>
    <formula>(ProductRevenue__c + FreightRevenue__c)/ Quantity</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Unit Price1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>