force-app/main/default/objects/QuoteLineItem/validationRules/Restrict_Drayge_Surcharge_for_PMA_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Drayge_Surcharge_for_PMA_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
ISPICKVAL($User.NewBusinessArea__c, &apos;PM EMEA&apos;) , 
ISCHANGED(  Drayage_Surcharge_per_uom__c  ) , 
NOT(ISBLANK(  Drayage_Surcharge_per_uom__c  )))</errorConditionFormula>
    <errorDisplayField>Drayage_Surcharge_per_uom__c</errorDisplayField>
    <errorMessage>This is a PM A specific field, please avoid entering any inputs</errorMessage>
</ValidationRule>