force-app/main/default/objects/QuoteLineItem/validationRules/Restrict_Fuel_Surcharge_for_PMA_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Fuel_Surcharge_for_PMA_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL($User.NewBusinessArea__c, &apos;PM EMEA&apos;), ISCHANGED(  Fuel_Surcharge_per_uom__c  ) , NOT(ISBLANK(  Fuel_Surcharge_per_uom__c  )))</errorConditionFormula>
    <errorDisplayField>Fuel_Surcharge_per_uom__c</errorDisplayField>
    <errorMessage>This is a PM A specific field, please avoid entering any inputs</errorMessage>
</ValidationRule>