force-app/main/default/objects/QuoteLineItem/validationRules/Restrict_ICMS_for_PMA_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_ICMS_for_PMA_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Business_Area__c &lt;&gt; &apos;PM EMEA&apos;, ISCHANGED(  ICMS__c  ) , NOT(ISBLANK( ICMS__c )))</errorConditionFormula>
    <errorDisplayField>ICMS__c</errorDisplayField>
    <errorMessage>This is a PM A specific field, please avoid entering any inputs</errorMessage>
</ValidationRule>