force-app/main/default/objects/QuoteLineItem/validationRules/Restrict_InflationSurcharge_for_PMAUsers.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_InflationSurcharge_for_PMAUsers</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL($User.NewBusinessArea__c, &apos;PM EMEA&apos;), ISCHANGED(  Inflation_Surcharge_per_uom__c  ) , NOT(ISBLANK(  Inflation_Surcharge_per_uom__c  )))</errorConditionFormula>
    <errorDisplayField>Inflation_Surcharge_per_uom__c</errorDisplayField>
    <errorMessage>This is a PM A specific field, please avoid entering any inputs</errorMessage>
</ValidationRule>