force-app/main/default/objects/QuoteLineItem/validationRules/Restrict_PIS_COFINS_for_PMA_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_PIS_COFINS_for_PMA_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Business_Area__c &lt;&gt; &apos;PM EMEA&apos;, ISCHANGED(  PIS_COFINS__c  ) , NOT(ISBLANK(  PIS_COFINS__c  )))</errorConditionFormula>
    <errorDisplayField>PIS_COFINS__c</errorDisplayField>
    <errorMessage>This is a PM A specific field, please avoid entering any inputs</errorMessage>
</ValidationRule>