force-app/main/default/objects/QuoteLineItem/validationRules/Restrict_Streic_Surcharge_for_PMA_Users.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Streic_Surcharge_for_PMA_Users</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISPICKVAL($User.NewBusinessArea__c, &apos;PM EMEA&apos;), ISCHANGED( Steric_Acid_Surcharge_per_uom__c ) , NOT(ISBLANK( Steric_Acid_Surcharge_per_uom__c )))</errorConditionFormula>
    <errorDisplayField>Steric_Acid_Surcharge_per_uom__c</errorDisplayField>
    <errorMessage>This is a PM A specific field, please avoid entering any inputs</errorMessage>
</ValidationRule>